--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               src="img/user.jpg"
               alt="User photo"
               class="user-nav__user-photo"
-            /><span class="user-nav-user-name">Jonas Sc</span>
+            /><span class="user-nav-user-name">Jonas</span>
           </div>
         </nav>
       </header>
